Added loader and updated components

--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -1,6 +1,6 @@
 .footer {
   background: $backgroundColor;
-  color: $secondaryColor;
+  color: $colorSecondary;
   text-align: center;
   padding: 10px 0;
 
