--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -25,7 +25,7 @@
       color: $fontColor;
 
       &:hover {
-        color: $secondaryColor;
+        color: $colorSecondary;
       }
     }
   }
