--- a/src/styles/_variables.module.scss
+++ b/src/styles/_variables.module.scss
@@ -1,9 +1,16 @@
+$colorLight: rgb(255, 255, 255);
+$colorLightTransparant: rgba(255, 255, 255, 0.4);
+$colorBlueLight: rgb(54, 183, 253, 0.2);
+$colorDark: rgb(17, 17, 17);
+$colorDarkTransparant: rgb(17, 17, 17, 0.4);
+$colorBlueDark: rgb(0, 30, 60);
+$colorSecondary: rgb(102, 102, 102);
+
 $backgroundColorTransparant: var(--background-color-transparant);
 $backgroundColor: var(--background-color);
 $gradientColor: var(--gradient-color);
 $fontColor: var(--font-color);
 $cardColor: var(--card-color);
-$secondaryColor: rgb(102, 102, 102);
 
 $screen-sm: 640px;
 $screen-md: 768px;
