--- a/src/containers/Portfolio.module.scss
+++ b/src/containers/Portfolio.module.scss
@@ -27,7 +27,7 @@
       height: auto;
       object-fit: cover;
       border-radius: 4px;
-      box-shadow: 0.1px 0.1px 1px $secondaryColor;
+      box-shadow: 0.1px 0.1px 1px $colorSecondary;
       opacity: 1;
       transition: 0.5s ease;
       backface-visibility: hidden;
@@ -63,8 +63,8 @@
         }
 
         &:hover {
-          color: $secondaryColor;
-          border-color: $secondaryColor;
+          color: $colorSecondary;
+          border-color: $colorSecondary;
         }
       }
     }
