--- a/src/containers/Skills.module.scss
+++ b/src/containers/Skills.module.scss
@@ -45,7 +45,7 @@
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: 10px;
-        box-shadow: 0.1px 0.1px 1px $secondaryColor;
+        box-shadow: 0.1px 0.1px 1px $colorSecondary;
         width: 100%;
         height: 100%;
       }
