Update css in skill section

--- a/src/containers/Skills.module.scss
+++ b/src/containers/Skills.module.scss
@@ -53,8 +53,8 @@
       .front {
         background: linear-gradient(
             315deg,
-            $backgroundColorTransparant,
-            $cardColor
+            $backgroundColorTransparant ,
+            $cardColor 50%
           ),
           $backgroundColor;
       }
